<resources>
    <string name="app_name">trained</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trained">trained</string>
    <string name="next">Далее</string>
    <string name="start_screen_annot">Выстроите и контролируйте свои тренировки</string>
    <string name="welcomeHome">С возвращением</string>
    <string name="setings_profile">Настроить профиль</string>
    <string name="addWorkout">Добавить упражнение</string>
    <string name="save">Сохранить</string>
    <string name="reciption_item">Количество повторений</string>
    <string name="planned_holidays">Запланированный отдых</string>
    <string name="complete">Завершить</string>
    <string name="next_mat_button">Продолжить</string>
    <string name="_0_00">0:00</string>
    <string name="quantityApproaches">Количевство подтходов</string>
    <string name="quantityRepetitions">Количевство повторений</string>
    <string name="nameWorkout">Название упражениея</string>
    <string name="selectedWorkoutwhichYouWillPerform">выберите упражнение которое будете выполнять</string>
    <string name="yourCompleetWorkout">Вы выполнили упражнение</string>
    <string name="YourWorkoutForToday">Ваша тренировка на сегодня</string>
    <string name="startWorkout">Начать тренировку</string>
    <string name="howYourName">Как вас зовут?</string>
    <string name="howYourAge">Скольво вам лет?</string>
    <string name="HowYourGrowth">Какой ваш рост?</string>
    <string name="HowYourWeight">Какой ваш вес?</string>
    <string name="approcatechItem">Количество подходов</string>
    <string name="timeChill">Время для отдыха</string>
    <string name="start">Старт</string>
    <string name="StartWorkout">Начать тренировку</string>
    <string name="delete">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="age">Возраст</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="profileSettings">Настройка профиля</string>
    <string name="configTrained">Конфигурация тренировок</string>
    <string name="supportiveTrainde">Все упражнения выполнены</string>
    <string name="app_theme">Тема</string>
    <string name="white">Светлая</string>
    <string name="dark">Тёмная</string>
    <string name="system">Системная</string>
    <string name="settings_app">Настройки</string>
    <string name="leave_the_screen_on">Оставить экран включенным</string>
    <string name="projectile_weight">Вес снаряда</string>
    <string name="welcome_to_black_theme">Добро пожаловать на темную сторону!</string>
    <string name="welcome_to_white_theme">Добро пожаловать на светлую сторону!</string>


    <string name="title">setTime</string>
    <string name="time_suffix">>></string>
    <string name="time_prefix">>></string>
    <string name="time_chill">Время отдыха</string>
    <string name="set_time_rest_chill">установить время отдыха</string>
</resources>