<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.workout.settingExercise.SettingExerciseFragment">


    <include
        android:id="@+id/upBar"
        layout="@layout/up_bar_simple_title_back"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNameExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        tools:text="Упражнение отжимание от пола "
        style="@style/textSecondContext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upBar" />

    <TextView
        android:id="@+id/textRepetitions"
        style="@style/textMainContext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textNameExercise"
        app:layout_constraintTop_toBottomOf="@+id/textNameExercise"
        tools:text="53" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reciption_item"
        style="@style/textSecondContext"
        app:layout_constraintStart_toStartOf="@+id/textRepetitions"
        app:layout_constraintTop_toBottomOf="@+id/textRepetitions" />

    <TextView
        android:id="@+id/textApproach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="4"
        style="@style/textMainContext"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/approcatechItem"
        style="@style/textSecondContext"
        app:layout_constraintStart_toStartOf="@+id/textApproach"
        app:layout_constraintTop_toBottomOf="@+id/textApproach" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/mainMaterialButton"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTime"
        style="@style/mainMaterialButton"
        android:layout_marginBottom="8dp"
        android:text="@string/set_time_rest_chill"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTimeChill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="6M"
        style="@style/textMainContext"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time_chill"
        style="@style/textSecondContext"
        app:layout_constraintStart_toStartOf="@+id/textTimeChill"
        app:layout_constraintTop_toBottomOf="@+id/textTimeChill" />
</androidx.constraintlayout.widget.ConstraintLayout>