<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearButtonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:paddingBottom="16dp"
                />

            <RadioButton
                android:id="@+id/rBDark"
                android:layout_width="25dp"
                android:layout_height="25dp"
                style="@style/mainRadioButton"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                style="@style/textSecondContext"
                android:text="@string/dark"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            >

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:paddingBottom="16dp"
                />

            <RadioButton
                android:id="@+id/rBWhite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                style="@style/mainRadioButton"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                style="@style/textSecondContext"
                android:text="@string/white"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            >

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:paddingBottom="16dp"
                />

            <RadioButton
                android:id="@+id/rBSystem"
                android:layout_width="25dp"
                android:layout_height="25dp"
                style="@style/mainRadioButton"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                style="@style/textSecondContext"
                android:text="@string/system"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>